--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -38,10 +38,11 @@ h3 {
 
 //blocks
 @import "./blocks/header";
+@import "./blocks/btn";
 // @import "blocks/btnDown";
 // @import "chiefslider";
 
-// @import "./blocks/btn";
+
 // @import "blocks/services";
 // @import "blocks/examples";
 // @import "blocks/coworking";
